--- a/silk-brush/my-files/index.html
+++ b/silk-brush/my-files/index.html
@@ -11,15 +11,15 @@
 <body>
     <div class="main">
         <h1>My Silk Brush Files</h1>
-        <p>This page will let you download any sketches, models, and screenshots in your local storage.</p>
+        <p>This page will let you download any sketches, models, and snapshots in your local storage.</p>
         <h2>Sketches</h2>
         <div id="sketches"></div>
         <br />
         <h2>Models</h2>
         <div id="models"></div>
         <br />
-        <h2>Screenshots</h2>
-        <div id="screenshots"></div>
+        <h2>Snapshots</h2>
+        <div id="snapshots"></div>
     </div>
 </body>
 
