Moved main.css, adjusted image formatting

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-test
+<!DOCTYPE html>
+
+<html>
+
+<head>
+    <link rel="stylesheet" href="main.css">
+    <title>msub2</title>
+</head>
+
+<body>
+    <div class="main">
+        <p>test</p>
+    </div>
+</body>
+
+</html>
