--- a/silk-brush/my-files/index.html
+++ b/silk-brush/my-files/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../../main.css">
     <script src="getfiles.js"></script>
     <title>My Silk Brush Files</title>
 </head>
