--- a/silk-brush/index.html
+++ b/silk-brush/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../main.css">
     <title>Silk Brush</title>
 </head>
 
