Updated pages and silk brush for public release

--- a/silk-brush/files/index.html
+++ b/silk-brush/files/index.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+    <div class="header">
+        <h1 id="title">m₂</h1>
+        <a href="index.html">Home</a>
+        <a href="silk-brush/">Silk Brush</a>
+        (
+        <a href="silk-brush/my-files/">Files</a>
+        )
+        <hr />
+    </div>
     <div class="main">
         <h1>My Silk Brush Files</h1>
         <p>This page will let you download any sketches, models, and snapshots in your local storage.</p>
