--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
 
 <head>
     <link rel="stylesheet" href="main.css">
-    <title>msub2</title>
+    <title>m₂</title>
 </head>
 
 <body>
+    <div class="header">
+        <h1 id="title">m₂</h1>
+        <a href="index.html">Home</a>
+        <a href="silk-brush/">Silk Brush</a>
+        (
+        <a href="silk-brush/my-files/">Files</a>
+        )
+        <hr />
+    </div>
     <div class="main">
-        <p>test</p>
+        <p>Welcome to my Github Pages site. There'll be more here eventually,
+            but I know you're here for Silk Brush. Just click the link at the top.</p>
     </div>
 </body>
 
