--- a/silk-brush/index.html
+++ b/silk-brush/index.html
@@ -10,10 +10,10 @@
 <body>
     <div class="header">
         <h1 id="title">m₂</h1>
-        <a href="index.html">Home</a>
-        <a href="silk-brush/">Silk Brush</a>
+        <a href="/">Home</a>
+        <a href="/silk-brush/">Silk Brush</a>
         (
-        <a href="silk-brush/my-files/">Files</a>
+        <a href="/silk-brush/my-files/">Files</a>
         )
         <hr />
     </div>
