--- a/silk-brush/files/index.html
+++ b/silk-brush/files/index.html
@@ -14,7 +14,7 @@
         <a href="/">Home</a>
         <a href="/silk-brush/">Silk Brush</a>
         (
-        <a href="/silk-brush/my-files/">Files</a>
+        <a href="/silk-brush/files/">Files</a>
         )
         <hr />
     </div>
