Adjusting iframe display

--- a/silk-brush/index.html
+++ b/silk-brush/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="main">
         <h1>Silk Brush</h1>
-        <iframe src="src/index.html" width="1280" height="720"></iframe>
+        <iframe src="src/index.html"></iframe>
         <h2>Info</h2>
         <p>
             Silk Brush is a port of Tilt Brush to WebXR, with the aim of being as
