--- a/silk-brush/files/index.html
+++ b/silk-brush/files/index.html
@@ -13,9 +13,8 @@
         <h1 id="title">m₂</h1>
         <a href="/">Home</a>
         <a href="/silk-brush/">Silk Brush</a>
-        (
-        <a href="/silk-brush/files/">Files</a>
-        )
+        (<a href="/silk-brush/files/">Files</a>)
+        <a href="/webxr-showcase/">WebXR Showcase</a>
         <hr />
     </div>
     <div class="main">
