--- a/silk-brush/index.html
+++ b/silk-brush/index.html
@@ -4,6 +4,16 @@
 
 <head>
     <link rel="stylesheet" href="../main.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZMDZRSKDLX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-ZMDZRSKDLX');
+    </script>
+    <!-- For tracking pageviews mainly -->
     <title>Silk Brush</title>
 </head>
 
