--- a/index.html
+++ b/index.html
@@ -4,18 +4,12 @@
 
 <head>
     <link rel="stylesheet" href="main.css">
+    <script src="components.js"></script>
     <title>m₂</title>
 </head>
 
 <body>
-    <div class="header">
-        <h1 id="title">m₂</h1>
-        <a href="/">Home</a>
-        <a href="/silk-brush/">Silk Brush</a>
-        (<a href="/silk-brush/files/">Files</a>)
-        <a href="/webxr-showcase/">WebXR Showcase</a>
-        <hr />
-    </div>
+    <m2-header></m2-header>
     <div class="main">
         <p>Welcome to my Github Pages site. There'll be more here eventually,
             but I know you're here for Silk Brush. Just click the link at the top.</p>
