Update Silk Brush pages

--- a/silk-brush/files/index.html
+++ b/silk-brush/files/index.html
@@ -9,14 +9,7 @@
 </head>
 
 <body>
-    <div class="header">
-        <h1 id="title">m₂</h1>
-        <a href="/">Home</a>
-        <a href="/silk-brush/">Silk Brush</a>
-        (<a href="/silk-brush/files/">Files</a>)
-        <a href="/webxr-showcase/">WebXR Showcase</a>
-        <hr />
-    </div>
+    <m2-header></m2-header>
     <div class="main">
         <h1>My Silk Brush Files</h1>
         <p>This page will let you download any sketches, models, and snapshots in your local storage.</p>
