--- a/silk-brush/index.html
+++ b/silk-brush/index.html
@@ -18,14 +18,7 @@
 </head>
 
 <body>
-    <div class="header">
-        <h1 id="title">m₂</h1>
-        <a href="/">Home</a>
-        <a href="/silk-brush/">Silk Brush</a>
-        (<a href="/silk-brush/files/">Files</a>)
-        <a href="/webxr-showcase/">WebXR Showcase</a>
-        <hr />
-    </div>
+    <m2-header></m2-header>
     <div class="main">
         <h1>Silk Brush</h1>
         <iframe src="src/index.html"></iframe>
