Forgot the script tags :upside_down:

--- a/silk-brush/index.html
+++ b/silk-brush/index.html
@@ -14,6 +14,7 @@
         gtag('config', 'G-ZMDZRSKDLX');
     </script>
     <!-- For tracking pageviews mainly -->
+    <script src="../components.js"></script>
     <title>Silk Brush</title>
 </head>
 
