--- a/silk-brush/files/index.html
+++ b/silk-brush/files/index.html
@@ -5,6 +5,7 @@
 <head>
     <link rel="stylesheet" href="../../main.css">
     <script src="getfiles.js"></script>
+    <script src="../components.js"></script>
     <title>My Silk Brush Files</title>
 </head>
 
